# langulo

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/emitter/: mod.rs
src/errors/: err.rs
src/lexer/: mod.rs  tok.rs
src/parser/: mod.rs  precedence.rs  tok_utils.rs
src/parser/ast/: lang.rs  mod.rs  node.rs
src/parser/syntax_tree/: lang.rs  node.rs
src/repl/: mod.rs
src/syntax_tree/: expr.rs  lang.rs  mod.rs  node.rs
src/tests/: mod.rs
src/typecheck/: mod.rs  types.rs
src/vm/: input.rs  instruction.rs  mod.rs
src/vm/garbage_collector/: mod.rs
src/vm/tagged_value/: mod.rs
src/vm/tagged_value/heap/: mod.rs
src/vm/word/: mod.rs  operations.rs  word_shape.rs
src/vm/word/heap/: mod.rs
src/word/: conversions.rs  heap.rs  mod.rs  operations.rs  structure.rs
