[package]
name = "langulo"
version = "0.1.0"
edition = "2021"

[dependencies]
#lexer
logos = "0.14.1"
#loseless syntax tree
rowan = "0.15.16"
# needed for rowan
num-derive = "0.4.2"
num-traits = "0.2.14"
# type checker
rusttyc = "0.5.0"

# cli ux
clap = { version = "4.0", features = ["derive"] }
rustyline = "14.0.0"
# colored strings
colored = "2.1.0"

# error messages
codespan-reporting = "0.11.1"
log = "0.4.22"

[dev-dependencies]